--- a/views/footer.ejs
+++ b/views/footer.ejs
@@ -1,6 +1,6 @@
   </body>
 
   <footer>
-  	<p>All Rights Reserved 2021</p>
+  	<p class="footer">All Rights Reserved 2021</p>
   </footer>	
 </html>
